--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "todo App on Node with Mongo DB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "test": "mocha */**/tests/server.test.js",
+   "test-watch" : "nodemon --exec \"npm test\""
+
   },
   "author": "",
   "license": "ISC",
