--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-   "test": "mocha */**/tests/server.test.js",
+   "test": "export NODE_ENV= test || SET \"NODE_ENV= test\" && mocha */**/tests/server.test.js",
    "test-watch" : "nodemon --exec \"npm test\""
 
   },
   "engines": {
     "node": "6.11.2"
-  },
+  },  
   "author": "",
   "license": "ISC",
   "dependencies": {
