--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "export NODE_ENV=test|| SET \"NODE_ENV=test\" && mocha */**/tests/server.test.js",
-   "test-watch" : "nodemon --exec \"npm test\""
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
     "node": "6.11.2"
-  },  
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.3"
   }
