--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test|| SET \"NODE_ENV=test\" && mocha */**/tests/server.test.js",
+    "test": "export NODE_ENV=test|| SET \"NODE_ENV=test\" && mocha */**/tests/server.test.js --timeout=7000",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
@@ -14,10 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
-    "mongoose": "^5.2.3"
+    "mongoose": "^5.2.3",
+    "validator": "^10.5.0"
   }
 }
